--- a/SLIDER/style.css
+++ b/SLIDER/style.css
@@ -4,8 +4,8 @@
     margin: 0 auto;
     position: relative;
   
-    /* IN THE END */
-    /* overflow: hidden; */
+  
+    overflow: hidden;
 }
 .slider {
     position: absolute;
